--- a/scripts/docker/build
+++ b/scripts/docker/build
@@ -1,9 +1,9 @@
 #!/usr/bin/env bash -e
 
 # Note: use lowercase names for the Docker images
-DOCKER_IMAGE="aivideo/pcs-remote-monitoring-webui"
+DOCKER_IMAGE="azureaivideo/pcs-remote-monitoring-webui"
 # "testing" is the latest dev build, usually matching the code in the "master" branch
-DOCKER_TAG="$DOCKER_IMAGE:testing"
+DOCKER_TAG="$DOCKER_IMAGE:3.0.0"
 
 APP_HOME="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && cd .. && pwd )/"
 source "$APP_HOME/scripts/.functions.sh"
