Add not to .env file to fix "Not Authorized" error

--- a/.env
+++ b/.env
@@ -3,4 +3,10 @@
 # Set the NODE_PATH to allow absolute paths
 # This setting will be picked up by the create react app webpack file
 NODE_PATH = src/
-REACT_APP_BASE_SERVICE_URL=https://jetaivideo.azurewebsites.net/
+
+# REACT_APP_BASE_SERVICE_URL is needed to ru the web site locally during development.
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+# DO NOT CHECK IN THIS FILE unless REACT_APP_BASE_SERVICE_URL is commented out.
+# Failure to comment it out will cause an extremely hard to troubleshoot
+# "Not Authorized" error when hitting the web site
+# REACT_APP_BASE_SERVICE_URL=https://jetaivideo.azurewebsites.net/
